Refactor: 요구사항 2-4 제네릭